<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_music_note_black_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_category_black_24"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_black_24"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24"
        android:title="@string/title_more" />

</menu>