<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="sign_in"
        android:title="@string/sign_in"
        android:icon="@drawable/ic_account_circle_black_24"
        android:summary="@string/sing_in_summary"/>
    <PreferenceCategory>

        <Preference
            android:key="about"
            android:title="@string/about_app"
            android:icon="@drawable/ic_info_black_24">
            <intent
                android:targetPackage="se.dsek.sangbok"
                android:targetClass="se.dsek.sangbok.ui.about.AboutActivity" />
        </Preference>

        <Preference
            android:key="dsek"
            android:title="@string/dsek"
            android:icon="@drawable/ic_link_black_24">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/dsek_link" />
        </Preference>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>